--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5743,14 +5743,22 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	number={},  
 	pages={2008-2011},}
 
-@INPROCEEDINGS{Buades2005,	
-	author={A. Buades and B. Coll and J-M. Morel},	
-	booktitle={2005 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'05)}, 	
-	title={A non-local algorithm for image denoising}, 	
-	year={2005},	
-	volume={2},	
-	number={},	
-	pages={60-65 vol. 2},}
+@article{Buades2005,
+	author = {Buades, A. and Coll, B. and Morel, J. M.},
+	title = {A Review of Image Denoising Algorithms, with a New One},
+	journal = {Multiscale Modeling \& Simulation},
+	volume = {4},
+	number = {2},
+	pages = {490-530},
+	year = {2005},
+	doi = {10.1137/040616024},
+	URL = { 
+		https://doi.org/10.1137/040616024
+	},
+	eprint = { 
+		https://doi.org/10.1137/040616024
+	}
+}
 
 @inproceedings{Puig2003,
 	author    = {D. Puig and M. A. Garc\'ia},
